--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Main Page</title>
+	<title>{{ .Title }}</title>
     <meta charset="UTF-8">
     <link href="styles.css" rel="stylesheet">
 </head>
