--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>{{ .Title }}</title>
     <meta charset="UTF-8">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles/styles.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -36,7 +36,7 @@
                     <span class="post-title first-featured-post__title">The Road Ahead</span>
                     <p class="post-text post-text_sizefirst-featured-post__text">The road ahead might be paved - it might not be.</p>
                     <div>
-                        <img class="first-featured-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <img class="first-featured-post__author-image" src="../images/Mat-Vogels.jpg" alt="">
                         <span class="post-author first-featured-post__author">Mat Vogels</span>
                         <span class="post-date first-featured-post__publish-date">September 25, 2015</span>
                     </div>
@@ -48,7 +48,7 @@
                     <span class="post-title second-featured-post__title">From Top Down</span>
                     <p class="post-text post-text_size second-featured-post__text">Once a year, go someplace youve never been before.</p>
                     <div class="featured-posts__post-footer">
-                        <img class="second-featured-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <img class="second-featured-post__author-image" src="../images/William-Wong.jpg" alt="">
                         <span class="post-author post-author_size second-featured-post__author second-featured-post__author_resize">William Wong</span>
                         <span class="post-date second-featured-post__publish-date">September 25, 2015</span>     
                     </div>
@@ -59,73 +59,73 @@
             <h2 class="block-title most-recent-posts__title">Most Recent</h2>
             <div>
                 <div class="first-recent-post main__first-recent-post">
-                    <img class="first-recent-post__image" src="images/first-recent.jpg" alt="">
+                    <img class="first-recent-post__image" src="../images/first-recent.jpg" alt="">
                     <div>
                         <span class="post-title post-title_size post-title_color first-recent-post__title">Still Standing Tall</span>
                         <p class="post-text post-text_size post-text_color first-recent-post__text">Life begins at the end of your comfort zone.</p>
                     </div>
                     <div>
-                        <img class="first-recent-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <img class="first-recent-post__author-image" src="../images/William-Wong.jpg" alt="">
                         <span class="post-author post-author_size post-author_color first-recent-post__author">William Wong</span>
                         <span class="post-date post-date_color  first-recent-post__publish-date">9/25/2015</span>      
                     </div>
                 </div>
                 <div class="second-recent-post main__second-recent-post">
-                    <img class="second-recent-post__image" src="images/IMAGEsecond-rec.png" alt="">
+                    <img class="second-recent-post__image" src="../images/IMAGEsecond-rec.png" alt="">
                     <div>
                         <span class="post-title post-title_size post-title_color second-recent-post__title">Sunny Side Up</span>
                         <p class="post-text post-text_size post-text_color second-recent-post__text">No place is ever as bad as they tell you its going to be.</p>
                     </div>
                     <div>
-                        <img class="second-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <img class="second-recent-post__author-image" src="../images/Mat-Vogels.jpg" alt="">
                         <span class="post-author post-author_color second-recent-post__author">Mat Vogels</span>
                         <span class="post-date post-date_color  second-recent-post__publish-date">9/25/2015</span>      
                     </div>                    
                 </div>
                 <div class="third-recent-post main__third-recent-post">
-                    <img class="third-recent-post__image" src="images/IMAGEthird-rec.png" alt="">
+                    <img class="third-recent-post__image" src="../images/IMAGEthird-rec.png" alt="">
                     <div>
                         <span class="post-title post-title_size post-title_color third-recent-post__title">Water Falls</span>
                         <p class="post-text post-text_size post-text_color third-recent-post__text">We travel not to escape life, but for life not to escape us.</p>
                     </div>
                     <div>
-                        <img class="third-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <img class="third-recent-post__author-image" src="../images/Mat-Vogels.jpg" alt="">
                         <span class="post-author post-author_color third-recent-post__author">Mat Vogels</span>
                         <span class="post-date post-date_color  third-recent-post__publish-date">9/25/2015</span>      
                     </div>                    
                 </div>
                 <div class="fourth-recent-post main__fourth-recent-post">
-                    <img class="fourth-recent-post__image" src="images/IMAGEfourth-rec.png" alt="">        
+                    <img class="fourth-recent-post__image" src="../images/IMAGEfourth-rec.png" alt="">        
                     <div>
                         <span class="post-title post-title_size post-title_color fourth-recent-post__title">Through the Mist</span>
                         <p class="post-text post-text_size post-text_color fourth-recent-post__text">Travel makes you see what a tiny place you occupy in the world.</p>
                     </div>
                     <div>
-                        <img class="fourth-recent-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <img class="fourth-recent-post__author-image" src="../images/William-Wong.jpg" alt="">
                         <span class="post-author post-author_size post-author_color fourth-recent-post__author">William Wong</span>
                         <span class="post-date post-date_color  fourth-recent-post__publish-date">9/25/2015</span>      
                     </div>         
                 </div>
                 <div class="fifth-recent-post main__fifth-recent-post">
-                    <img class="fifth-recent-post__image" src="images/IMAGEfifth-rec.png" alt="">
+                    <img class="fifth-recent-post__image" src="../images/IMAGEfifth-rec.png" alt="">
                     <div>
                         <span class="post-title post-title_size post-title_color fifth-recent-post__title">Awaken Early</span>
                         <p class="post-text post-text_size post-text_color fifth-recent-post__text">Not all those who wander are lost.</p>
                     </div>
                     <div>
-                        <img class="fifth-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <img class="fifth-recent-post__author-image" src="../images/Mat-Vogels.jpg" alt="">
                         <span class="post-author post-author_color fifth-recent-post__author">Mat Vogels</span>
                         <span class="post-date post-date_color  fifth-recent-post__publish-date">9/25/2015</span> 
                     </div>
                 </div>
                 <div class="sixth-recent-post main__sixth-recent-post">
-                    <img class="sixth-recent-post__image" src="images/IMAGEsixth-rec.png" alt="">
+                    <img class="sixth-recent-post__image" src="/images/IMAGEsixth-rec.png" alt="">
                     <div>
                         <span class="post-title post-title_size post-title_color sixth-recent-post__title">Try it Always</span>
                         <p class="post-text post-text_size post-text_color sixth-recent-post__text">The world is a book, and those who do not travel read only one page.</p>
                     </div>
                     <div>
-                        <img class="sixth-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <img class="sixth-recent-post__author-image" src="/images/Mat-Vogels.jpg" alt="">
                         <span class="post-author post-author_color sixth-recent-post__author">Mat Vogels</span>
                         <span class="post-date post-date_color  sixth-recent-post__publish-date">9/25/2015</span>   
                     </div>                 
